Bug 1848455 - Don't re-enable updates prematurely in HTMLStyleElement::SetTextContentInternal. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D186110